# cpp_tutorial

./: SpOS onboarding reading list.docx  SpatialOS overview.docx  Tutorial.md  default_launch.json  tutorial.md
schema/: blank.schema
snapshotgenerator/: CMakeLists.txt  default_launch.json  snapshotgenerationReadme.md  spatialos.json  spatialos_worker_packages.json.in
snapshotgenerator/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  spatialos_worker_packages.json
snapshotgenerator/cmake-build/dependencies/worker_sdk/: target.spatialos_worker_packages.json.md5
snapshotgenerator/cmake-build/dependencies/worker_sdk/include/improbable/: collections.h  defaults.h  pbio.h  worker.h  worker_protocol.h
snapshotgenerator/cmake-build/dependencies/worker_sdk/include/improbable/detail/: alpha.i.h  collections.i.h  connection.i.h  dispatcher.i.h  worker_detail.h
snapshotgenerator/cmake-build/generated_src/: othello.cc  othello.h
snapshotgenerator/cmake-build/generated_src/improbable/: standard_library.cc  standard_library.h
snapshotgenerator/cmake-build/schema/: Makefile  cmake_install.cmake
snapshotgenerator/cmake-build/snapshots/: Makefile  cmake_install.cmake
snapshotgenerator/cmake-build/workers/game/: Makefile  cmake_install.cmake
snapshotgenerator/schema/: CMakeLists.txt  othello.schema
snapshotgenerator/snapshots/: CMakeLists.txt  default.snapshot  main.cpp
snapshotgenerator/workers/game/: CMakeLists.txt  build.json  spatialos.game.worker.json
snapshotgenerator/workers/game/src/: game.cpp
snapshotgenerator/workers/player/: CMakeLists.txt  build.json  spatialos.player.worker.json
snapshotgenerator/workers/player/src/: player.cpp
snapshots/: default.snapshot
workers/Example/: CMakeLists.txt  build.json  spatialos.Example.worker.json
workers/Example/cmake_build/: CMakeCache.txt  Makefile  cmake_install.cmake
workers/Example/cmake_build/Schema/: Makefile  cmake_install.cmake
workers/Example/cmake_build/WorkerSdk/: Makefile  cmake_install.cmake
workers/Example/src/: startup.cc
workers/Managed/src/: startup.cc
